--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="id" class="container mt-5 pt-5">
@@ -52,5 +53,11 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="container text-muted text-center py-3 mt-5">
+                <h5>Copyright &copy; 2021 |</h5>
+                <a class="text-warning text-decoration-none" href="#about">All Rights Reserved by Codingal Education</a>
+            </div>
+        </footer>
     </body>
 </html>
